grammar.js
    source_file: ($) =>
      repeat(
        choice(
          // https://www.w3.org/TR/css-color-4/#color-syntax
          $.css_color,

          // https://developer.android.com/reference/android/graphics/Color#encoding
          // https://api.flutter.dev/flutter/dart-ui/Color-class.html
          $.u32_argb,

          $.tailwindcss_color,

          $.xterm_sgr_rgb,

          $._css_hex_color_invalid,
          $._non_symbol,
          $._symbol,
        ),
      ),

    // In preparation for CSS Color Level 5, where CSS color becomes recursive.
    css_color: ($) =>
      choice(
        $.css_hex_color,
        $.css_named_color,
        $.css_keyword_transparent,
        $.css_function_rgb,
        $.css_function_rgba,
        $.css_function_hsl,
        $.css_function_hsla,
        $.css_function_hwb,
        $.css_function_lab,
        $.css_function_oklab,
        $.css_function_lch,
        $.css_function_oklch,
        $.css_function_color,
      ),

    // https://www.w3.org/TR/css-syntax-3/#number-token-diagram
    _css_number: (_) => css_number,
    css_number: ($) => $._css_number,

    // https://www.w3.org/TR/css-syntax-3/#percentage-token-diagram
    _css_percentage: (_) => css_percentage,
    css_percentage: ($) => $._css_percentage,

    // https://www.w3.org/TR/css-color-4/#alpha-syntax
    css_alpha_value: ($) => choice($._css_number, $._css_percentage),

    // https://www.w3.org/TR/css-values-4/#angle-value
    // https://www.w3.org/TR/css-values-4/#typedef-dimension
    _css_angle: (_) => css_angle,
    css_hue: ($) => choice($._css_number, $._css_angle),

    // According to CSS grammar, there is no spaces between the function name and the opening parenthesis.
    // This can be done with token.immediate() alone.
    // We additionally wrap the sequence with token() because
    // we want to reduce parse errors when the text looks like `color: `
    // Without token(), `color: ` will be tokenized as `color` and `:`.
    // tree-sitter considers `:` as parse error because `color` is not
    // immediately followed by `(`.
    // With token(), the color function rule will be considered only when
    // `color(` is tokenized.
    // This can reduce parse error, and hence make parsing faster.
    // The caveat is that the field "function_name" now includes
    // the opening parenthesis at the end.
    // I cannot figure out how to work around that.
    // But this is a very minor issue comparing to the degraded parsing
    // performance in a CSS file containing a lot of occurrences of `color: `
    css_function_name_hsl: (_) =>
      token(seq(css_keyword("hsl"), token.immediate("("))),
    css_function_name_hsla: (_) =>
      token(seq(css_keyword("hsla"), token.immediate("("))),
    css_function_name_hwb: (_) =>
      token(seq(css_keyword("hwb"), token.immediate("("))),
    css_function_name_lab: (_) =>
      token(seq(css_keyword("lab"), token.immediate("("))),
    css_function_name_oklab: (_) =>
      token(seq(css_keyword("oklab"), token.immediate("("))),
    css_function_name_lch: (_) =>
      token(seq(css_keyword("lch"), token.immediate("("))),
    css_function_name_color: (_) =>
      token(seq(css_keyword("color"), token.immediate("("))),

    // https://www.w3.org/TR/css-color-4/#rgb-functions
    css_function_hsl: ($) =>
      choice($._css_function_hsl_legacy, $._css_function_hsl_modern),
    _css_function_hsl_legacy: ($) => hsl_legacy($, $.css_function_name_hsl),
    _css_function_hsl_modern: ($) =>
      h_modern($, $.css_function_name_hsl, "s", "l"),
    css_function_hsla: ($) =>
      choice($._css_function_hsla_legacy, $._css_function_hsla_modern),
    _css_function_hsla_legacy: ($) => hsl_legacy($, $.css_function_name_hsla),
    _css_function_hsla_modern: ($) =>
      h_modern($, $.css_function_name_hsla, "s", "l"),

    // https://www.w3.org/TR/css-color-4/#the-hwb-notation
    css_function_hwb: ($) => h_modern($, $.css_function_name_hwb, "w", "b"),

    // https://www.w3.org/TR/css-color-4/#specifying-lab-lch
    css_function_lab: ($) => lab($, $.css_function_name_lab),
    // https://www.w3.org/TR/css-color-4/#specifying-oklab-oklch
    css_function_oklab: ($) => lab($, $.css_function_name_oklab),

    // https://www.w3.org/TR/css-color-4/#specifying-lab-lch
    css_function_lch: ($) => lch($, $.css_function_name_lch),
    // https://www.w3.org/TR/css-color-4/#specifying-oklab-oklch
    css_function_color: ($) =>
      choice($.css_function_color_rgb, $.css_function_color_xyz),
    css_function_color_rgb: ($) =>
      seq(
        field("function_name", $.css_function_name_color),
        field("color_space", $.css_predefined_rgb),
        field("r", choice($.css_number, $.css_percentage, $.css_keyword_none)),
        field("g", choice($.css_number, $.css_percentage, $.css_keyword_none)),
        field("b", choice($.css_number, $.css_percentage, $.css_keyword_none)),
        optional(
          seq(
            "/",
            field("alpha", choice($.css_alpha_value, $.css_keyword_none)),
          ),
        ),
        ")",
      ),
    css_predefined_rgb: (_) =>
      choice(
        css_keyword("srgb"),
        css_keyword("srgb-linear"),
        css_keyword("display-p3"),
        css_keyword("a98-rgb"),
        css_keyword("prophoto-rgb"),
        css_keyword("rec2020"),
      ),
    css_function_color_xyz: ($) =>
      seq(
        field("function_name", $.css_function_name_color),
        field("color_space", $.css_xyz_space),
        field("x", choice($.css_number, $.css_percentage, $.css_keyword_none)),
        field("y", choice($.css_number, $.css_percentage, $.css_keyword_none)),
        field("z", choice($.css_number, $.css_percentage, $.css_keyword_none)),
        optional(
          seq(
            "/",
            field("alpha", choice($.css_alpha_value, $.css_keyword_none)),
          ),
        ),
        ")",
      ),
    css_xyz_space: (_) =>
      choice(
        css_keyword("xyz"),
        css_keyword("xyz-d50"),
        css_keyword("xyz-d65"),
      ),

    // https://www.w3.org/TR/css-color-4/#hex-notation
    _css_hex_color_invalid: (_) => /#[0-9a-zA-Z]+/,

    // https://www.w3.org/TR/css-color-4/#named-colors
    css_keyword_none: (_) => css_keyword("none"),

    _symbol: (_) => symbol,
    _non_symbol: (_) => non_symbol,
