test/corpus/css_function_hwb.txt
================
css_function_hwb
================

hwb(0 0% 0%)
hwb(0 0% 0% / 0%)

hwb(0deg 0% 0%)
hwb(0grad 0% 0%)
hwb(0grad 0% 0%)
hwb(0rad 0% 0%)
hwb(0turn 0% 0%)


Hwb(none None NONE)
hWb(none None NONE / none)

---

(source_file
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_hue)
      w: (css_percentage)
      b: (css_percentage)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_hue)
      w: (css_percentage)
      b: (css_percentage)
      alpha: (css_alpha_value)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_hue)
      w: (css_percentage)
      b: (css_percentage)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_hue)
      w: (css_percentage)
      b: (css_percentage)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_hue)
      w: (css_percentage)
      b: (css_percentage)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_hue)
      w: (css_percentage)
      b: (css_percentage)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_hue)
      w: (css_percentage)
      b: (css_percentage)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_keyword_none)
      w: (css_keyword_none)
      b: (css_keyword_none)))
  (css_color
    (css_function_hwb
      function_name: (css_function_name_hwb)
      h: (css_keyword_none)
      w: (css_keyword_none)
      b: (css_keyword_none)
      alpha: (css_keyword_none))))
