test/corpus/css_function_lab.txt
================
css_function_lab
================

lab(0 0% 0%)
lab(0% 0 0%)
lab(0% 0% 0)

lab(0 0% 0% / 0%)
lab(0% 0 0% / 0%)
lab(0% 0% 0 / 0%)

lab(none None NONE)
lab(none None NONE / none)

---

(source_file
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_number)
      a: (css_percentage)
      b: (css_percentage)))
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_percentage)
      a: (css_number)
      b: (css_percentage)))
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_percentage)
      a: (css_percentage)
      b: (css_number)))
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_number)
      a: (css_percentage)
      b: (css_percentage)
      alpha: (css_alpha_value)))
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_percentage)
      a: (css_number)
      b: (css_percentage)
      alpha: (css_alpha_value)))
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_percentage)
      a: (css_percentage)
      b: (css_number)
      alpha: (css_alpha_value)))
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_keyword_none)
      a: (css_keyword_none)
      b: (css_keyword_none)))
  (css_color
    (css_function_lab
      function_name: (css_function_name_lab)
      L: (css_keyword_none)
      a: (css_keyword_none)
      b: (css_keyword_none)
      alpha: (css_keyword_none))))
